--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,2 +1,5 @@
 <h1>Welcome#about</h1>
 <p>Created by: <%= my_name %></p>
+
+<%= link_to "Follow me", "http://www.facebook.com/trybloc", class: "social-btn" %>
+
