--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,6 +4,9 @@
     <div class="media-body">
       <h4 class="media-heading">
         <%= link_to post.title, post %>
+        <small>
+        	submitted <%= time_ago_in_words(post.created_at) %> ago by <%= post.user.name %><br/>
+        </small>
       </h4>
     </div>
   </div>
