--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -4,22 +4,24 @@
    <%= link_to "Edit Topic", edit_topic_path, class: 'btn btn-success' %>
  <% end %>
  
-  <div class="row">
+<div class="row">
    <div class="col-md-8">
      <p class="lead"><%= @topic.description %></p>
      <% @posts.each do |post| %>
        <div class="media">
+         <%= render partial: 'votes/voter', locals: { post: post } %>
          <div class="media-body">
            <h4 class="media-heading">
              <%= link_to post.title, [@topic, post] %>
            </h4>
-           <%= image_tag(post.image.small.url) if post.image? %>
+             <%= image_tag(post.image.small.url) if post.image? %>
             <small>
              <%= image_tag(post.user.avatar.tiny.url) if post.user.avatar? %>
              submitted <%= time_ago_in_words(post.created_at) %> ago by
              <%= post.user.name %><br/>
              <%= post.comments.count %> Comments
            </small>
+             </small>
          </div>
        </div>
      <% end %>
