--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -21,6 +21,7 @@
        <%= pluralize(@post.down_votes, 'down vote') %>
      </small>
    </div>
+   <%= render partial: 'favorites/favorite', locals: { post: @post } %>
   </div>
   </div>
     <div>
