--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -8,22 +8,7 @@
    <div class="col-md-8">
      <p class="lead"><%= @topic.description %></p>
      <% @posts.each do |post| %>
-       <div class="media">
-         <%= render partial: 'votes/voter', locals: { post: post } %>
-         <div class="media-body">
-           <h4 class="media-heading">
-             <%= link_to post.title, [@topic, post] %>
-           </h4>
-             <%= image_tag(post.image.small.url) if post.image? %>
-            <small>
-             <%= image_tag(post.user.avatar.tiny.url) if post.user.avatar? %>
-             submitted <%= time_ago_in_words(post.created_at) %> ago by
-             <%= post.user.name %><br/>
-             <%= post.comments.count %> Comments
-           </small>
-             </small>
-         </div>
-       </div>
+       <%= render @posts %>
      <% end %>
      <%= will_paginate @posts %>
    </div>
