--- a/app/views/topics/posts/show.html.erb
+++ b/app/views/topics/posts/show.html.erb
@@ -28,6 +28,5 @@
         <%= render partial: 'comments/form', locals: {topic: @topic, post: @post, comment: @comment} %>
     </div>
 	<h2><%= @comments.count %> Comments</h2>
-  	<%= render @comments %>
-
+  	<%= render partial: 'comments/comment', collection: @comments %>
   
