Finished Bloccit Finally

--- a/app/views/topics/posts/show.html.erb
+++ b/app/views/topics/posts/show.html.erb
@@ -27,6 +27,6 @@
     <div>
         <%= render partial: 'comments/form', locals: {topic: @topic, post: @post, comment: Comment.new} %>
     </div>
-	<h2><%= @comments.count %> Comments</h2>
-  	<%= render partial: 'comments/comment', collection: @comments %>
+	<h2>Comments</h2>
+  <div class="js-comments">	<%= render partial: 'comments/comment', collection: @comments %></div>
   
